Update keywords