@@ -3,14 +3,12 @@ package org.example;
 import com.WinUIAutomation.constants.WinAppConstants;
 import com.WinUIAutomation.driver.WinAppDriver;
 import com.WinUIAutomation.driver.WinAppDriverManagement;
+import com.WinUIAutomation.keywords.ByAccessibilityId;
 import com.WinUIAutomation.keywords.WinUI;
 import io.appium.java_client.windows.WindowsDriver;
 import io.appium.java_client.windows.WindowsElement;
 import org.apache.commons.io.FileUtils;
-import org.openqa.selenium.By;
-import org.openqa.selenium.OutputType;
-import org.openqa.selenium.TakesScreenshot;
-import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.*;
 import org.openqa.selenium.interactions.Actions;
 import org.testng.Assert;
 import org.testng.annotations.Test;
@@ -19,6 +17,7 @@ import pageObject.pageObject;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
+import java.util.Objects;
 
 public class demoAutomation {
     public static WindowsDriver<WindowsElement> driver;
@@ -28,7 +27,7 @@ public class demoAutomation {
             WindowsDriver<WindowsElement> driver = WinAppDriver.valueOf(WinAppConstants.APP_NAME).createDriver();
             WinAppDriverManagement.setDriver(driver);
             System.out.println("Driver initialized successfully");
-            if(pageObject.getPasswordPrompt(driver) != null){
+            if(WinUI.getWindowElement(pageObject.getPasswordPrompt) != null){
                 WinUI.clearAndFillText(pageObject.getUsername,data.userName);
                 WinUI.clearAndFillText(pageObject.getPassword,data.password);
                 WinUI.clickElement(pageObject.getLoginbtn);
@@ -41,28 +40,27 @@ public class demoAutomation {
             WinUI.clickElement(pageObject.getOKButton);
             WinUI.clearAndFillText(pageObject.getSearchField,data.OpenVMIAPI);
             WinUI.clickElement(pageObject.getSearchButton);
-            List<WindowsElement> gribViewData = WinUI.getWindowElements(By.className("ListViewItem"));
+            List<WebElement> gribViewData = WinUI.getWindowElements(By.className("ListViewItem"));
             if(gribViewData.isEmpty()){
                 WinUI.clearAndFillText(pageObject.getDataset,data.DatasetValue);
                 WinUI.clearAndFillText(pageObject.getbudgVersion,data.budgVersionValue);
                 WinUI.clearAndFillText(pageObject.getYear,data.YearValue);
                 WinUI.clickElement(pageObject.getApplyButton);
             }
-            gribViewData.get(0).findElementByClassName("TextBox").sendKeys(data.WareHouseValue);
-            gribViewData.get(1).findElementByClassName("TextBox").sendKeys(data.MainProductValue);
-            gribViewData.get(2).findElementByClassName("TextBox").sendKeys(data.ItemNumberValue);
-            pageObject.getApplyButton(driver).click();
-            List<WindowsElement> gribViewDetailData = driver.findElementsByClassName("ListViewItem");
-            Thread.sleep(1000);
-            performDoubleClick(driver, gribViewDetailData.getFirst());
-
-            List<WindowsElement> gribViewDetailData2 = driver.findElementsByClassName("ListViewItem");
-            gribViewDetailData2.get(22).click();
-            String value = gribViewDetailData2.get(22).findElementByAccessibilityId("R23C4").getAttribute("Value.Value").trim();
+            gribViewData.get(0).findElement(By.className("TextBox")).sendKeys(data.WareHouseValue);
+            gribViewData.get(1).findElement(By.className("TextBox")).sendKeys(data.MainProductValue);
+            gribViewData.get(2).findElement(By.className("TextBox")).sendKeys(data.ItemNumberValue);
+            WinUI.clickElement(pageObject.getApplyButton);
+            List<WebElement> gribViewDetailData = WinUI.getWindowElements(By.className("ListViewItem"));
+            WinUI.clickElement(gribViewDetailData.get(2));
+            WinUI.performDoubleClick(gribViewDetailData.get(2));
+            List<WebElement> gribViewDetailData2 = WinUI.getWindowElements(By.className("ListViewItem"));
+            WinUI.clickElement(Objects.requireNonNull(gribViewDetailData2).get(22));
+            String value = gribViewDetailData2.get(22).findElement(ByAccessibilityId.accessibilityId("R23C4")).getAttribute("Value.Value").trim();
             System.out.println(value);
             Assert.assertEquals(value,"24");
-            TakeImage(driver);
-            driver.quit();
+            WinUI.takeFullPageScreenshot("tesssssssssss");
+            WinAppDriverManagement.quit();
         }
         catch (Exception e){
             if(driver != null){
@@ -127,11 +125,6 @@ public class demoAutomation {
 //        }
 //
 //    }
-public static void performDoubleClick(WindowsDriver<WindowsElement> driver, WindowsElement element) {
-    Actions action = new Actions(driver);
-    action.moveToElement(element).doubleClick().perform();
-    System.out.println("Double click performed on element: " + element);
-}
     public static void openLawSonApp() {
         String filePath = "C:\\TE\\aaaaaaaa.appref-ms";
 
